# MathDevMCP

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  environment-backends.yml  pyproject.toml
.mathdevmcp/: real_local_high_level_pilot_report_2026-06-29-final.json  real_local_high_level_pilot_report_2026-06-29.json  real_local_high_level_workflow_benchmark_closure_phase02_focused_pytest.txt  real_local_high_level_workflow_benchmark_closure_phase03_focused_pytest.txt  real_local_high_level_workflow_benchmark_closure_phase03_route_availability.json  real_local_high_level_workflow_benchmark_closure_phase04_baseline.json  real_local_high_level_workflow_benchmark_closure_phase04_focused_pytest.txt  real_local_high_level_workflow_benchmark_closure_phase05_focused_pytest.txt  real_local_high_level_workflow_benchmark_closure_phase05_repaired_baseline.json  real_local_high_level_workflow_benchmark_closure_phase06_focused_pytest.txt  real_local_high_level_workflow_benchmark_closure_phase06_packet_report.json  real_local_high_level_workflow_benchmark_closure_phase07_cli_help.txt  real_local_high_level_workflow_benchmark_closure_phase07_focused_pytest.txt  real_local_high_level_workflow_benchmark_closure_phase07_forbidden_claim_grep.txt  real_local_high_level_workflow_benchmark_closure_phase08_benchmark_gate.json  real_local_high_level_workflow_benchmark_closure_phase08_final_matrix.json  real_local_high_level_workflow_benchmark_closure_phase08_focused_pytest.txt  real_local_high_level_workflow_benchmark_closure_phase08_forbidden_claim_grep.txt  real_local_high_level_workflow_benchmark_closure_phase08_packets.json  real_local_high_level_workflow_benchmark_closure_phase08_schema.json  real_local_high_level_workflow_benchmark_closure_phase08_seeded_quality.json  real_local_source_adapter_report_2026-06-29-frozen-after-rlhl04-repair.json  real_local_source_adapter_report_2026-06-29-rlhl04-spd-repair.json
benchmarks/: README.md
docs/: README.md  dead-code-audit.md  kalman-hessian-agent-guide.md  mathdevmcp-colleague-quick-start.md  mathdevmcp-department-operations.md  mathdevmcp-dependency-lock-strategy.md  mathdevmcp-deployment-guide.md  mathdevmcp-maintainer-guide.md  mathdevmcp-operator-guide.md  mathdevmcp-packet-compatibility-policy.md  mathdevmcp-release-policy.md  mathdevmcp-release-report.tex  mathdevmcp-security-governance.md  mathdevmcp-support-matrix.md  mathdevmcp-versioning-policy.md  mcp-simplification.md  preamble.tex  private-corpus-manifest-guide.md  proposal.tex  references.bib  risky-debt-maliar-deep-learning-lecture-note.tex
examples/: private-corpus-manifest.template.json
mcp/: README.md
scripts/: audit_release_report_substance.sh  backend_env_doctor.sh  benchmark_gate_smoke.sh  check_credit_card_public_surface_parity.py  clean_install_smoke.sh  collect_release_evidence.sh  create_release_manifest.py  create_sanitized_private_corpus.sh  doctor_smoke.sh  generate_p01_synthetic_evidence.py  generate_p02_extraction_evidence.py  generate_p03_context_evidence.py  generate_release_report_evidence.sh  handoff_gate.sh  maintainer_check.sh  mcp_stdio_smoke.py  p01_bootstrap_gate.sh  p01_governance.py  p02_governance.py  p03_governance.py  parser_benchmark_smoke.sh  quality_gate.sh  release_hypotheses_check.sh  release_matrix.sh  release_smoke.sh  run_backend_command.sh  run_bgs_d447_staged_capstone.py  run_boehl_gap_closure_matrix.py  run_credit_card_mission_audit.py  run_credit_card_v8_mcp_audit.py  run_p08_frozen_validation.py  run_p08c1_target_fidelity_replay.py  run_p08c_frozen_workflow.py  run_p08d_frozen_payload_replay.py  run_p09_final_red_team.py  run_resumable_d447_closable_gap_evidence.py  run_resumable_d447_remediation.py  security_scan.sh  setup_backend_env.sh  setup_latexml_backend.sh  (+4 more)
tests/: __init__.py  conftest.py  p02_no_backend_guard.py  p03_no_backend_guard.py  p09_guarded_cli_entry.py  p09_no_live_backend_guard.py  test_actionable_abstentions.py  test_agent_handoff_packet.py  test_agent_hypothesis_expansion.py  test_agent_report_artifacts.py  test_agent_workflows.py  test_applied_math_audit.py  test_applied_math_semantics.py  test_assumption_discovery.py  test_assumptions.py  (+162 more)
(+1622 files in other folders)
