[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathdevmcp"
version = "0.1.0"
description = "Mathematical development MCP tools for large docs and code-doc consistency"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Proprietary internal release candidate; public release license pending"}
authors = [{name = "MathDevMCP maintainers"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]
quality = ["build", "twine"]
symbolic = ["sympy==1.14.0"]
mcp = ["mcp==1.27.0"]
leandojo = ["lean-dojo==4.20.0"]
lean-search = ["lean-explore==1.2.1"]
pantograph = ["pantograph==0.3.15"]
integrations = ["lean-explore==1.2.1", "pantograph==0.3.15"]
all = ["sympy==1.14.0", "mcp==1.27.0", "lean-dojo==4.20.0", "lean-explore==1.2.1", "pantograph==0.3.15", "build", "twine"]

[project.scripts]
mathdevmcp = "mathdevmcp.cli:main"
mathdevmcp-mcp = "mathdevmcp.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
